# MediaSDK

./: .gitattributes  .gitignore  AllBuild.sln  Android.mk  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.in  CODEOWNERS  CONTRIBUTING.md  LICENSE  README  README.md  README.rst  UUID  _TEST.txt  _testOfPR.txt  mfxconfig.h.in  smoketest.sh  testOfBranch.txt  third-party-programs.txt
_studio/: CMakeLists.txt
_studio/enctools/: CMakeLists.txt  enctools.cpp
_studio/enctools/include/: mfx_enctools.h  mfx_enctools_aenc.h  mfx_enctools_brc.h  mfx_enctools_brc_defs.h  mfx_enctools_utils.h
_studio/enctools/src/: mfx_enctools_aenc.cpp  mfx_enctools_brc.cpp  mfx_enctools_common.cpp  mfx_enctools_utils.cpp
_studio/fastboot/apl_gp.h264/: CMakeLists.txt
_studio/fastboot/apl_gp.h264.hevc/: CMakeLists.txt
_studio/fastboot/apl_gp.h264.vp9/: CMakeLists.txt
_studio/fastboot/apl_gp.h264.vp9.hevc/: CMakeLists.txt  asc.cmake  decode.cmake  encode_hw_stub.cmake  vpp.cmake
_studio/fastboot/apl_gp.hevc/: CMakeLists.txt
_studio/fastboot/apl_gp.vp9/: CMakeLists.txt
_studio/fastboot/apl_gp.vp9.hevc/: CMakeLists.txt
_studio/hevc_fei/: CMakeLists.txt
_studio/hevce_hw/: Android.mk  CMakeLists.txt
_studio/mfx_lib/: Android.mk  CMakeLists.txt  libmfx.map  libmfxhw.map  pkg-config.pc.cmake
_studio/mfx_lib/cmut/: cmassert.h  cmbenchmark.h  cmbufferex.h  cmdeviceex.h  cmexample.h  cminfrastructure.h  cmkernelex.h  cmkernelruntimeenv.h  cmkerneltest.h  cmperformance.h  cmqueueex.h  cmrtex.h  cmsurface2dext.h  cmsurface2dupext.h  cmtaskex.h  cmthreadspaceex.h  cmutility.h  cmutility_genx.h
_studio/mfx_lib/decode/: CMakeLists.txt
_studio/mfx_lib/encode/: CMakeLists.txt
_studio/mfx_lib/encode_hw/: CMakeLists.txt
_studio/shared/: Android.mk
_studio/vp9e_hw/: CMakeLists.txt
_testsuite/msdk_ts/: CMakeLists.txt
api/mfx_dispatch/: CMakeLists.txt
contrib/SafeStringStaticLibrary/: .cproject  .project  Android.mk  CMakeLists.txt  LICENSE&COPYING.txt
contrib/ipp/: CMakeLists.txt
samples/: AllSamples.sln  CMakeLists.txt  build.pl
samples/ExtendedUWPSamples/: InteropSamples.sln
samples/metrics_monitor/: CMakeLists.txt
samples/sample_camera/: sample_camera.sln  sample_camera.vcxproj
samples/sample_common/: Android.mk  CMakeLists.txt  sample_common.vcxproj
samples/sample_decode/: Android.mk  CMakeLists.txt  sample_decode.sln  sample_decode.vcxproj  sample_video_wall.bat
samples/sample_encode/: Android.mk  CMakeLists.txt  sample_encode.sln  sample_encode.vcxproj
samples/sample_fei/: CMakeLists.txt
samples/sample_hevc_fei/: CMakeLists.txt
samples/sample_hevc_fei_abr/: CMakeLists.txt
samples/sample_multi_transcode/: Android.mk  CMakeLists.txt  sample_multi_transcode.sln  sample_multi_transcode.vcxproj
samples/sample_plugins/: sample_plugins.sln
samples/sample_vpp/: Android.mk  CMakeLists.txt  sample_vpp.sln  sample_vpp.vcxproj
tests/unit/: CMakeLists.txt
tools/asg-hevc/: CMakeLists.txt  asg-hevc.vcxproj  asg-hevc.vcxproj.filters
tools/tracer/: CMakeLists.txt  README  README.md  libmfx.map  mfx-tracer-config.vcxproj  mfx-tracer.def  mfx-tracer.vcxproj  mfx-tracer_vs12.sln  readme-tracer.md
tutorials/: CMakeLists.txt  tutorials.sln
tutorials/common/: CMakeLists.txt  cmd_options.cpp  cmd_options.h  common_directx.cpp  common_directx.h  common_directx11.cpp  common_directx11.h  common_utils.cpp  common_utils.h  common_utils_linux.cpp  common_utils_windows.cpp  common_vaapi.cpp  common_vaapi.h  ocl_process.cpp  ocl_process.h
tutorials/simple_1_session/: simple_session.sln  simple_session.vcxproj
tutorials/simple_2_decode/: simple_decode.sln  simple_decode.vcxproj
tutorials/simple_2_decode_hevc10/: simple_decode_hevc10.sln  simple_decode_hevc10.vcxproj
tutorials/simple_2_decode_vmem/: simple_decode_d3d.sln  simple_decode_d3d.vcxproj  simple_decode_d3d11.sln  simple_decode_d3d11.vcxproj
tutorials/simple_3_encode/: simple_encode.sln  simple_encode.vcxproj
tutorials/simple_3_encode_hevc10/: simple_encode_hevc10.sln  simple_encode_hevc10.vcxproj
tutorials/simple_3_encode_vmem/: simple_encode_d3d.sln  simple_encode_d3d.vcxproj  simple_encode_d3d11.sln  simple_encode_d3d11.vcxproj
tutorials/simple_3_encode_vmem_async/: CMakeLists.txt  simple_encode_d3d11_async.sln  simple_encode_d3d11_async.vcxproj  simple_encode_d3d_async.sln  simple_encode_d3d_async.vcxproj
tutorials/simple_4_vpp_resize/: simple_vpp.sln  simple_vpp.vcxproj
tutorials/simple_4_vpp_resize_3dlut_vmem/: simple_vpp_d3d.sln  simple_vpp_d3d11.sln
tutorials/simple_4_vpp_resize_denoise/: simple_vpp.sln  simple_vpp.vcxproj
tutorials/simple_4_vpp_resize_denoise_vmem/: simple_vpp_d3d.vcxproj  simple_vpp_d3d11.vcxproj
tutorials/simple_5_transcode/: simple_transcode.sln  simple_transcode.vcxproj
tutorials/simple_5_transcode_opaque/: CMakeLists.txt  simple_transcode_opaque.sln  simple_transcode_opaque.vcxproj
tutorials/simple_5_transcode_opaque_async/: simple_transcode_opaque_async.sln  simple_transcode_opaque_async.vcxproj
tutorials/simple_5_transcode_opaque_async_vppresize/: simple_transcode_opaque_async_vppresize.sln  simple_transcode_opaque_async_vppresize.vcxproj
tutorials/simple_5_transcode_opaque_async_vppresize_3dlut/: simple_5_transcode_opaque_async_vppresize_3dlut.vcxproj
tutorials/simple_5_transcode_vmem/: simple_transcode_d3d.sln  simple_transcode_d3d.vcxproj  simple_transcode_d3d11.sln  simple_transcode_d3d11.vcxproj
tutorials/simple_6_decode_vpp_postproc/: simple_decode_vpp_pp.sln  simple_decode_vpp_pp.vcxproj
tutorials/simple_6_encode_vmem_lowlatency/: simple_encode_d3d11_lowlat.sln  simple_encode_d3d11_lowlat.vcxproj  simple_encode_d3d_lowlat.sln  simple_encode_d3d_lowlat.vcxproj
tutorials/simple_6_encode_vmem_vpp_preproc/: simple_encode_d3d11_preproc.sln  simple_encode_d3d11_preproc.vcxproj  simple_encode_d3d_preproc.sln  simple_encode_d3d_preproc.vcxproj
tutorials/simple_6_transcode_opaque_lowlatency/: simple_transcode_opaque_lowlat.sln  simple_transcode_opaque_lowlat.vcxproj
tutorials/simple_7_codec/: simple_codec.cpp  simple_codec.vcxproj
(+2636 files in other folders)
